# sora-shooting-star

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: WpAddExecutable.cmake  WpAddLibrary.cmake  WpCheckCompiler.cmake
scripts/: clean.py  emconfig.py  generate_html.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/graphics/: gfx.h
src/common/graphics/ogl/: gl_buffer.cpp  gl_buffer.h  gl_program.cpp  gl_program.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  gl_vertex_array.h  gl_vertex_attribute.cpp  gl_vertex_attribute.h  image_data.cpp  image_data.h  shader_src.h
src/common/math/: mat44.h  vec2.h  vec3.h  wpmath.h
src/common/os/: os_utils.h  platform.h
src/common/os/html5/: os_utils.cpp
src/common/os/osx/: os_utils.cpp
src/common/osx/: os_utils.cpp
src/common/utils/: log.h
src/common/win32/: os_utils.cpp
src/s01/: CMakeLists.txt  main.cpp
